2007-07-13  Akim Demaille  <demaille@gostai.com>

		merge -r 1266:1300 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-07-13  Akim Demaille  <demaille@gostai.com>
	Fix ''d
	* src/parser/bison/ugrammar.y: Actually, it's 'dd.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Remove incorrect nonterminal aliases
	* src/urbi/trunk/kernel1/src/parser/bison/ugrammar.y: Remove
	explicit strings that were made to be aliases for terminals,
	but it is not accepted but Bison like this, it believes they
	are fresh tokens.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Update the test suite external.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	merge -r 1259:1266 https://svn.gostai.com/svn/kernel1/branches/1.0
	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	Warn on use of operator ^. Add operator **.
	* src/parser/uparser.cc,
	* src/parser/uparser.hh: Add a mehod to emit warnings.
	* src/parser/bison/utoken.l: Emit warnings on ^.
        Scan ** as exponent operator.
	* src/uconnection.cc,
	* src/uexpression.cc: Report warnings through the connection.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Fix previous patch: use automerge.
	* .automerge: Update.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	Fix logic operators precedence.
	* src/parser/bison/ugrammar.y: Here.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	merge -r 1186:1213 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-07-01  Jean-Christophe Baillie  <baillie@gostai.com>
	This time, we use a cache mechanism to hold the current cycle variable
	value.

	Fix ticket #111 (again).
	* src/ucommand.cc: use cyclevalue with a cache mechanism to initialize
	startval.
	* src/uvariable.cc: init cycleBeginTime to an impossible value (-1).
	* src/uvariable.hh: declare cycleBeginTime and cyclevalue.

	2007-07-01  Jean-Christophe Baillie  <baillie@gostai.com>
	This is a backward move that reintroduces ticket 111, but it will fix
	a much bigger problem where Aldeb is currently stuck. A future better
	fix of 111 is on the way.
